# file-ai

./: .gitignore  GEMINI.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  README.md  SPOTLIGHT_SEARCH.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
Project-doc/: 006_UI_ROADMAP.md  00_OVERVIEW.md  01_ARCHITECTURE.md  02_FEATURES_AND_ROADMAP.md  03_DEVELOPMENT_LOG.md  04_ERROR.md  05_FOLDER_STRUCT.md
src/: App.css  App.tsx  WindowRouter.tsx  index.css  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_create_toys.sql
src-tauri/src/: commands.rs  database.rs  embed_and_store.rs  embeddings.rs  file_ops.rs  file_scanner.rs  file_scanner_old.rs  lib.rs  main.rs  search_window.rs  shortcuts.rs  test.rs  vss.rs
src-tauri/src/database/: ann_search.rs  lancedb_ops.rs  lancedb_search.rs  mod.rs  rules.rs  schema.rs  search.rs  seeder.rs
src-tauri/src/entities/: file.rs  mod.rs  user.rs
src-tauri/src/file_scanner/: content.rs  db.rs  discovery.rs  lancedb.rs  mod.rs  pipeline.rs  scoring.rs  types.rs  utils.rs
src-tauri/src/migration/: m20220101_000001_create_files_table.rs  m20220101_000001_create_user_table.rs  m20250721_000002_create_vss_files_table.rs  mod.rs
src-tauri/src/services/: file_vector_service.rs  mod.rs  user_service.rs
src/components/: AppLayout.tsx  ResultsList.tsx  ScanButton.tsx  Search.tsx  SearchBox.tsx  SpotlightSearch.tsx  TitleBar.tsx
src/hooks/: useGlobalShortcut.ts  useSearch.ts
src/lib/: api.ts
src/pages/: Home.tsx  SearchPage.tsx  Settings.tsx  SettingsPage.tsx
src/types/: index.ts
