[package]
name = "file-ai"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "file_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = ["codegen"] }

[dependencies]
# Tauri v2 dependencies
tauri = { version = "2.0", features = ["rustls-tls"] }
tauri-plugin-opener = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"

# Database dependencies - SeaORM
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "0.12"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# File system utilities
dirs = "5.0"
walkdir = "2.3"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Other utilities
once_cell = "1"
futures = "0.3"
anyhow = "1.0"
