[package]
name = "file-ai"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
build = "build.rs" 

[lib]
name = "file_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = ["codegen"] }

[dependencies]
# Tauri v2 dependencies
tauri = { version = "2.0", features = ["rustls-tls"] }
tauri-plugin-opener = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"

#embedding
ollama-rs = "0.3.2"

rusqlite = { version = "0.30.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlite-vec = "0.1.6"
zerocopy = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# File system utilities
dirs = "5.0"
walkdir = "2.3"

# HTTP client
reqwest = { version = "0.12", features = ["blocking", "json"] }
bytemuck = "1.15"

# Other utilities
once_cell = "1"
futures = "0.3"
anyhow = "1.0"
log = "0.4"

pdf-extract = "0.9.0"
lopdf = "0.36.0"
tauri-plugin-global-shortcut = "2.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
sysinfo = "0.30"
