[package]
name = "file-ai"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
build = "build.rs" 

[lib]
name = "file_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = ["codegen"] }

[dependencies]
# Tauri v2 dependencies
tauri = { version = "2.0", features = ["rustls-tls"] }
tauri-plugin-opener = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
lancedb = "0.8.0"
hf-hub = { version = "0.4.3", features = ["tokio"] }
rand = "0.8.5" # Keep rand for other dependencies
rand_distr = "0.4.3" # Keep rand_distr for compatibility
lazy_static = "1.4.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlite-vec = "0.1.6"
zerocopy = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }
rayon = "1.8" 

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# File system utilities
dirs = "5.0"
walkdir = "2.3"

# HTTP client
reqwest = { version = "0.12", features = ["blocking", "json"] }
bytemuck = "1.15"

# Other utilities
once_cell = "1"
futures = "0.3"
anyhow = "1.0"
log = "0.4"

#reading
pdf-extract = "0.9.0"
lopdf = "0.31"
calamine = "0.24"           # Excel/Calc (XLSX, XLS, ODS) - fastest
quick-xml = "0.31"          # XML - fastest parser
csv = "1.3"                 # CSV - fastest
epub = "2.0"                # EPUB files

tauri-plugin-global-shortcut = "2.3"
regex = "1.10"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
sysinfo = "0.30"
